--- a/Sales.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Sales.WEB/Pages/Countries/CountriesIndex.razor
@@ -3,6 +3,8 @@
 
 <h3>Paises</h3>
 
+<a class="btn btn-primary" href="/countries/create">Nuevo Pais</a>
+
 <GenericList MyList="Countries" > 
     <Body>
         <table class="table table-striped">
