Finish countries CRUD

--- a/Sales.WEB/Pages/Countries/CountryForm.razor
+++ b/Sales.WEB/Pages/Countries/CountryForm.razor
@@ -50,7 +50,7 @@
             {
                 Title = "Confirmacion",
                 Text = "Deseas abandonar la pagina y perder los cambios?",
-                Icon = SweetAlertIcon.Warning,
+                Icon = SweetAlertIcon.Question,
                 ShowCancelButton = true,
                 CancelButtonText = "No",
                 ConfirmButtonText = "Si"
