--- a/Sales.WEB/Pages/Categories/CategoriesIndex.razor
+++ b/Sales.WEB/Pages/Categories/CategoriesIndex.razor
@@ -1,35 +1,32 @@
-﻿@page "/countries"
+﻿@page "/categories"
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 @inject NavigationManager navigationManager
 
-<h3>Paises</h3>
+<h3>Categorias</h3>
 
-<a class="btn btn-primary" href="/countries/create">Nuevo Pais</a>
+<a class="btn btn-primary" href="/categories/create">Nueva Categoria</a>
 
-<GenericList MyList="Countries" > 
+<GenericList MyList="Categories">
     <Body>
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>País</th>
-                    <th>Estados / Provincias</th>
+                    <th></th>
+                    <th>Categoria</th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var country in Countries!)
+                @foreach (var category in Categories!)
                 {
                     <tr>
                         <td>
-                            @country.Name
+                            <a class="btn btn-warning" href="/categories/edit/@category.Id">Editar</a>
+                            <button class="btn btn-danger" @onclick=@(() => DeleteAsync(category.Id))>Borrar</button>
                         </td>
                         <td>
-                            @country.StatesNumber
+                            @category.Name
                         </td>
-                        <td>
-                            <a class="btn btn-warning"href="/countries/edit/@country.Id" >Editar</a>
-                            <button class="btn btn-danger" @onclick=@(() => DeleteAsync(country.Id))>Borrar</button>
-                        </td>                        
                     </tr>
                 }
             </tbody>
@@ -40,7 +37,7 @@
 
 
 @code {
-    public List<Country>? Countries { get; set; }
+    public List<Category>? Categories { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -49,8 +46,8 @@
 
     private async Task LoadAsync()
     {
-        var responseHttp = await repository.Get<List<Country>>("/api/countries");
-        Countries = responseHttp.Response;
+        var responseHttp = await repository.Get<List<Category>>("/api/categories");
+        Categories = responseHttp.Response;
     }
 
     private async Task DeleteAsync(int id)
@@ -72,10 +69,10 @@
             return;
         }
 
-        var responseHttp = await repository.Delete<Country>($"/api/countries/{id}");
+        var responseHttp = await repository.Delete<Category>($"/api/categories/{id}");
         if (responseHttp.Error)
         {
-            if(responseHttp.HttpResponseMessage.StatusCode != HttpStatusCode.NotFound)
+            if (responseHttp.HttpResponseMessage.StatusCode != HttpStatusCode.NotFound)
             {
                 var message = await responseHttp.GetErrorMessageAsync();
                 await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
