--- a/Sales.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Sales.WEB/Pages/Countries/CountriesIndex.razor
@@ -7,13 +7,19 @@
 
 <a class="btn btn-primary" href="/countries/create">Nuevo Pais</a>
 
+<Pagination CurrentPage="currentPage"
+            TotalPages="totalPages"
+            SelectedPage="SelectedPageAsync" />
+
+
 <GenericList MyList="Countries" > 
     <Body>
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>País</th>
-                    <th>Estados / Provincias</th>
+                    <th style="width:220px">Estados / Departamentos</th>
+                    <th style="width:260px"></th>
                 </tr>
             </thead>
             <tbody>
@@ -42,17 +48,34 @@
 
 @code {
     public List<Country>? Countries { get; set; }
+    private int currentPage = 1;
+    private int totalPages;
+
 
     protected override async Task OnInitializedAsync()
     {
         await LoadAsync();
     }
 
-    private async Task LoadAsync()
+    private async Task LoadAsync(int page = 1)
     {
-        var responseHttp = await repository.Get<List<Country>>("/api/countries");
-        Countries = responseHttp.Response;
+        string url1 = $"api/countries?page={page}";
+        string url2 = $"api/countries/totalPages";
+
+        var responseHppt = await repository.Get<List<Country>>(url1);
+        var responseHppt2 = await repository.Get<int>(url2);
+        Countries = responseHppt.Response!;
+        totalPages = responseHppt2.Response!;
+
     }
+
+    private async Task SelectedPageAsync(int page)
+    {
+        currentPage = page;
+        await LoadAsync(page);
+
+    }
+
 
     private async Task DeleteAsync(int id)
     {
