--- a/Sales.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Sales.WEB/Pages/Countries/CountriesIndex.razor
@@ -5,7 +5,19 @@
 
 <h3>Paises</h3>
 
-<a class="btn btn-primary" href="/countries/create">Nuevo Pais</a>
+<div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+    <div>
+        <a class="btn btn-primary" href="/countries/create">Nuevo País</a>
+    </div>
+    <div class="mx-2">
+        <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar país..." @bind-value="Filter" />
+    </div>
+    <div>
+        <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Filtrar</button>
+        <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync">Limpiar</button>
+    </div>
+</div>
+
 
 <Pagination CurrentPage="currentPage"
             TotalPages="totalPages"
@@ -51,6 +63,15 @@
     private int currentPage = 1;
     private int totalPages;
 
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Page { get; set; } = "";
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Filter { get; set; } = "";
+
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -59,9 +80,25 @@
 
     private async Task LoadAsync(int page = 1)
     {
-        string url1 = $"api/countries?page={page}";
-        string url2 = $"api/countries/totalPages";
+        if (!string.IsNullOrWhiteSpace(Page))
+        {
+            page = Convert.ToInt32(Page);
+        }
 
+        string url1 = string.Empty;
+        string url2 = string.Empty;
+
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url1 = $"api/countries?page={page}";
+            url2 = $"api/countries/totalPages";
+        }
+        else
+        {
+            url1 = $"api/countries?page={page}&filter={Filter}";
+            url2 = $"api/countries/totalPages?filter={Filter}";
+        }
+                
         var responseHppt = await repository.Get<List<Country>>(url1);
         var responseHppt2 = await repository.Get<int>(url2);
         Countries = responseHppt.Response!;
@@ -110,5 +147,19 @@
         await LoadAsync();
 
     }
+
+    private async Task CleanFilterAsync()
+    {
+        Filter = string.Empty;
+        await ApplyFilterAsync();
+    }
+
+    private async Task ApplyFilterAsync()
+    {
+        int page = 1;
+        await LoadAsync(page);
+        await SelectedPageAsync(page);
+    }
+
 
 }
