Security HardCode on  Web

--- a/Sales.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Sales.WEB/Pages/Countries/CountriesIndex.razor
@@ -2,6 +2,7 @@
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 @inject NavigationManager navigationManager
+@attribute [Authorize(Roles = "Admin")]
 
 <h3>Paises</h3>
 
