--- a/Sales.WEB/Pages/Categories/CategoryDetails.razor
+++ b/Sales.WEB/Pages/Categories/CategoryDetails.razor
@@ -54,6 +54,7 @@ else
                             </td>
                             <td>
                                 @product.Stock
+                                <label>Unidad/es.</label>
                             </td>
                             
                             <td>
